[project]
name = "dotfiles-python"
version = "0.1.0"
description = "Global Python tools and packages"
requires-python = ">=3.14"
dependencies = [
    "bandit",
    "blessings",
    "chardet",
    "cleo",
    "httpx",
    "ipython",
    "ipdb",
    "matplotlib",
    "notebook",
    "pandas",
    "py-spy",
    "python-nmap",
    "ruff",
    "ty",
]
